@@ -1,1 +1,4 @@
 # Tower-Defense
+Edit Configuration for testfx
+
+-ea --add-modules=javafx.graphics --add-reads javafx.graphics=ALL-UNNAMED --add-opens javafx.graphics/com.sun.javafx.application=ALL-UNNAMED 
